добавлен базовый элемент, и элемент линия

--- a/SVGClassLibrary/SVGClassLibrary.csproj
+++ b/SVGClassLibrary/SVGClassLibrary.csproj
@@ -41,9 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ISVG_Tag.cs" />
+    <Compile Include="SVGBrush.cs" />
     <Compile Include="SVGDoc.cs" />
+    <Compile Include="SVGItem.cs" />
+    <Compile Include="SVGLine.cs" />
     <Compile Include="SVGNotes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SVGPoint.cs" />
+    <Compile Include="WebColors.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
